[gd_scene load_steps=10 format=3 uid="uid://cklyv3tfoq8xw"]

[ext_resource type="PackedScene" uid="uid://bcx41l64n5b10" path="res://player_car/scenes/moodybody.tscn" id="1_boqgi"]
[ext_resource type="Script" path="res://player_car/scenes/Player.gd" id="1_cywx2"]
[ext_resource type="PackedScene" uid="uid://dn2m7mr36g823" path="res://player_car/scenes/moodyRwheel.tscn" id="2_l518c"]
[ext_resource type="PackedScene" uid="uid://dcvx4nr2dm23t" path="res://player_car/scenes/moodyLwheel.tscn" id="3_qr6m4"]
[ext_resource type="Script" path="res://player_car/scenes/SpringArm3D.gd" id="5_stdcx"]
[ext_resource type="Theme" uid="uid://gaqa2ub6jau6" path="res://ui_theme.tres" id="6_inbsy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pvqvl"]
radius = 0.748195
height = 3.22755

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wmd6x"]
radius = 0.423848
height = 1.65538

[sub_resource type="BoxShape3D" id="BoxShape3D_f32pe"]
size = Vector3(1.93583, 1.72962, 4.85784)

[node name="Moody" type="VehicleBody3D"]
process_mode = 1
collision_layer = 2
collision_mask = 5
input_ray_pickable = false
mass = 1600.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.01, 0)
script = ExtResource("1_cywx2")

[node name="moodybody" parent="." instance=ExtResource("1_boqgi")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.93575e-08, -0.262124, 0.141253)

[node name="BodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 8.83816e-08, 0.663627, 0.81641)
shape = SubResource("CapsuleShape3D_pvqvl")

[node name="FrontCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, 0, -3.82137e-15, -8.74228e-08, -1, -1.17739e-07, 0.413673, -1.54134)
shape = SubResource("CapsuleShape3D_wmd6x")

[node name="WheelFrontR" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.744623, 0.185208, -1.41767)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.374
wheel_friction_slip = 4.0
suspension_travel = 0.5
suspension_stiffness = 100.0
damping_compression = 2.0
damping_relaxation = 2.5

[node name="equinoxrRFwheel" parent="WheelFrontR" instance=ExtResource("2_l518c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.366037, -0.00212455)

[node name="WheelFrontL" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.769767, 0.184901, -1.4177)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.374
wheel_friction_slip = 4.0
suspension_travel = 0.5
suspension_stiffness = 100.0
damping_compression = 2.0
damping_relaxation = 2.5

[node name="equinoxrLFwheel" parent="WheelFrontL" instance=ExtResource("3_qr6m4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.366037, -0.00212455)

[node name="WheelRearR" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.770053, 0.184901, 1.56605)
wheel_radius = 0.374
wheel_friction_slip = 3.3
suspension_travel = 0.5
suspension_stiffness = 100.0
damping_compression = 2.0
damping_relaxation = 2.5

[node name="equinoxrRFwheel" parent="WheelRearR" instance=ExtResource("2_l518c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.366037, -0.00212455)

[node name="WheelRearL" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.77, 0.184901, 1.566)
wheel_radius = 0.374
wheel_friction_slip = 3.3
suspension_travel = 0.5
suspension_stiffness = 100.0
damping_compression = 2.0
damping_relaxation = 2.5

[node name="equinoxrLFwheel" parent="WheelRearL" instance=ExtResource("3_qr6m4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.366037, -0.00212455)

[node name="SpringArm3D" type="SpringArm3D" parent="."]
top_level = true
spring_length = 7.0
script = ExtResource("5_stdcx")

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]

[node name="Lights" type="Node3D" parent="."]

[node name="Headlights" type="Node3D" parent="Lights"]

[node name="HeadlightL" type="SpotLight3D" parent="Lights/Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.584082, 0.44931, -2.34151)
light_energy = 15.0
spot_range = 50.0

[node name="OmniLight3D" type="OmniLight3D" parent="Lights/Headlights/HeadlightL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0572392, 0.00352919, 0.208887)
light_energy = 2.0
omni_range = 1.0

[node name="HeadlightR" type="SpotLight3D" parent="Lights/Headlights"]
transform = Transform3D(1, 0, 0, 0, 0.963106, 0.269122, 0, -0.269122, 0.963106, 0.556231, 0.450087, -2.29685)
light_energy = 15.0
spot_range = 50.0

[node name="OmniLight3D" type="OmniLight3D" parent="Lights/Headlights/HeadlightR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00715262, -0.0124534, 0.193204)
light_energy = 2.0
omni_range = 1.0

[node name="TaillightL" type="OmniLight3D" parent="Lights/Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.760032, 0.746211, 2.30202)
light_color = Color(1, 0, 0, 1)
light_energy = 0.5
omni_range = 1.0

[node name="TaillightR" type="OmniLight3D" parent="Lights/Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.769512, 0.746211, 2.30202)
light_color = Color(1, 0, 0, 1)
light_energy = 0.5
omni_range = 1.0

[node name="ReverseLights" type="Node3D" parent="Lights"]

[node name="ReverseLightL" type="OmniLight3D" parent="Lights/ReverseLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.760032, 0.556, 2.30202)
light_energy = 0.5
omni_range = 1.0

[node name="ReverseLightR" type="OmniLight3D" parent="Lights/ReverseLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.769512, 0.556, 2.30202)
light_energy = 0.5
omni_range = 1.0

[node name="Brakelights" type="Node3D" parent="Lights"]

[node name="BrakelightL" type="OmniLight3D" parent="Lights/Brakelights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.760032, 0.746211, 2.30202)
light_color = Color(1, 0, 0, 1)
light_energy = 1.5
omni_range = 1.0

[node name="BrakelightR" type="OmniLight3D" parent="Lights/Brakelights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.769512, 0.746211, 2.30202)
light_color = Color(1, 0, 0, 1)
omni_range = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="debug_info" type="Label" parent="CanvasLayer"]
offset_right = 558.0
offset_bottom = 241.0
theme_override_font_sizes/font_size = 30
text = "600"

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_inbsy")

[node name="MainButtons" type="MarginContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 139.0
offset_right = 175.0
offset_bottom = -140.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/MainButtons"]
z_as_relative = false
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/PauseMenu/MainButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Exit the pause menu and continue playing"
text = "Resume"

[node name="MainMenu" type="Button" parent="CanvasLayer/PauseMenu/MainButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Return to the main menu at game launch"
text = "Main Menu"

[node name="Levels" type="Button" parent="CanvasLayer/PauseMenu/MainButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Currently non-functional"
text = "Level Selection"

[node name="Quit" type="Button" parent="CanvasLayer/PauseMenu/MainButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Exit the game"
text = "Quit Game"

[node name="GameUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("6_inbsy")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -154.0
offset_bottom = 86.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameUI/MarginContainer"]
layout_mode = 2

[node name="CoolantCans" type="Label" parent="CanvasLayer/GameUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Coolant Jugs Left: 20"

[node name="TimeLabel" type="Label" parent="CanvasLayer/GameUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time: 00.00"

[node name="Temp" type="Label" parent="CanvasLayer/GameUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Temp: 0 C"

[node name="CoolantLeft" type="Label" parent="CanvasLayer/GameUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Coolant left:"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/GameUI/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="CoolantTimer" type="Timer" parent="."]
autostart = true

[node name="TempTimer" type="Timer" parent="."]
autostart = true

[node name="CoolantDetector" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="CoolantDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.674171, 0.0166464)
shape = SubResource("BoxShape3D_f32pe")

[connection signal="pressed" from="CanvasLayer/PauseMenu/MainButtons/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MainButtons/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MainButtons/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
